# learn_math

./: README.md  main.py  pyproject.toml  test.ipynb
.ipynb_checkpoints/: test-checkpoint.ipynb
.plans/: 00_linear_algebra.md  01_next_steps.md  02_exams.md
.virtual_documents/: test.ipynb
.virtual_documents/learn/: 01_linear_algebra_basics.ipynb  02_linear_algebra_visual.ipynb  03_linear_algebra_exercises.ipynb  04_calculus_basics.ipynb  05_probability_basics.ipynb  06_applied_linear_algebra.ipynb  07_optimization_basics.ipynb
learn/: 01_linear_algebra_basics.ipynb  02_linear_algebra_visual.ipynb  03_linear_algebra_exercises.ipynb  04_calculus_basics.ipynb  05_probability_basics.ipynb  06_applied_linear_algebra.ipynb  07_optimization_basics.ipynb  08_exam_linear_algebra.ipynb  09_exam_calculus_probability.ipynb  10_exam_final.ipynb
learn/.ipynb_checkpoints/: 01_linear_algebra_basics-checkpoint.ipynb  02_linear_algebra_visual-checkpoint.ipynb  03_linear_algebra_exercises-checkpoint.ipynb  04_calculus_basics-checkpoint.ipynb  05_probability_basics-checkpoint.ipynb  06_applied_linear_algebra-checkpoint.ipynb  07_optimization_basics-checkpoint.ipynb
