[project]
name = "play-uv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.7",
    "jupyterlab-lsp>=5.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "python-lsp-server>=1.14.0",
    "scipy>=1.17.1",
]
